--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,11 @@
   },
   "author": "Adam Musiał",
   "license": "MIT",
-  
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
-  
   "lint-staged": {
     "*.js": [
       "eslint --fix",
@@ -29,7 +27,6 @@
       "git add"
     ]
   },
-  
   "devDependencies": {
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.1",
@@ -50,6 +47,7 @@
   },
   "dependencies": {
     "next": "^9.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
