--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,11 @@
   "author": "Adam Musiał",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.6.5"
+    "mongoose": "^5.6.5",
+    "mongoose-dummy": "^1.0.8"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
