--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "stylelint-processor-styled-components": "^1.8.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "next": "^9.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
