--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "testWatch": "jest --watchAll --verbose"
   },
   "repository": {
     "type": "git",
@@ -57,6 +57,7 @@
     "stylelint-processor-styled-components": "^1.8.0"
   },
   "dependencies": {
+    "@types/jest": "^24.0.18",
     "axios": "^0.19.0",
     "next": "^9.0.1",
     "polished": "^3.4.1",
