add unit tests for poems action creators 2

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "testWatch": "jest --watchAll --verbose"
+    "testWatch": "jest --watchAll --verbose",
+    "testSingle": "jest --watch --verbose poems.test.js"
   },
   "repository": {
     "type": "git",
